package com.jovan.descripix.ui.common

object TestTags {

    const val HOME_SCREEN = "HOME_SCREEN"
    const val GUEST_SCREEN = "GUEST_SCREEN"
    const val HOME_AUTH_SCREEN = "HOME_AUTH_SCREEN"
    const val SIGN_IN_BUTTON = "SIGN_IN_BUTTON"
    const val DETAILS_SCREEN = "DETAILS_SCREEN"
    const val CAPTION_TEXT_LAYOUT = "CAPTION_TEXT_LAYOUT"
    const val BOTTOM_BAR_ICON = "BOTTOM_BAR_ICON"
    const val FLOATING_TOOLBAR_SAVE = "FLOATING_TOOLBAR_SAVE"
    const val PROFILE_AUTH_SCREEN = "PROFILE_AUTH_SCREEN"
    const val PROFILE_GUEST_SCREEN = "PROFILE_GUEST_SCREEN"
    const val LOGOUT_CONFIRM = "LOGOUT_CONFIRM"
    const val LOGOUT_MODAL = "LOGOUT_MODAL"
    const val EDIT_PROFILE_MODAL = "EDIT_PROFILE_MODAL"

    const val EDIT_ABOUT_ME = "EDIT_ABOUT_ME"
    const val EDIT_GENDER = "EDIT_GENDER"
    const val BUTTON_SHARE = "BUTTON_SHARE"
    const val EDIT_PROFILE_SUBMIT = "EDIT_PROFILE_SUBMIT"
}